@@ -1,5 +1,10 @@
 2008-07-04  Neil Roberts  <neil@o-hand.com>
 
+	* examples/test-shader.rb: Added the edge-detect filter from
+	test-shader.c
+
+2008-07-04  Neil Roberts  <neil@o-hand.com>
+
 	* examples/test-shader.rb: Use sampler2D instead of sampler2DRect
 	now that Clutter has removed support for the ARB_texture_rectangle
 	extension.
